--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,10 +5,147 @@
 
 $gray-medium-light: #eaeaea;
 
+@mixin box_sizing {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+/* miscellaneous */
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
+}
 /* universal */
 
 body {
   padding-top: 60px;
+  color: #6f8ba4;
+  margin-top: 20px;
+}
+.section {
+  padding: 100px 0;
+  position: relative;
+}
+.gray-bg {
+  background-color: #f5f5f5;
+}
+img {
+  max-width: 100%;
+}
+img {
+  vertical-align: middle;
+  border-style: none;
+}
+/* About Me 
+---------------------*/
+.about-text h3 {
+  font-size: 45px;
+  font-weight: 700;
+  margin: 0 0 6px;
+}
+@media (max-width: 767px) {
+  .about-text h3 {
+    font-size: 35px;
+  }
+}
+.about-text h6 {
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+@media (max-width: 767px) {
+  .about-text h6 {
+    font-size: 18px;
+  }
+}
+.about-text p {
+  font-size: 18px;
+  max-width: 450px;
+}
+.about-text p mark {
+  font-weight: 600;
+  color: #20247b;
+}
+
+.about-list {
+  padding-top: 10px;
+}
+.about-list .media {
+  padding: 5px 0;
+}
+.about-list label {
+  color: #20247b;
+  font-weight: 600;
+  width: 88px;
+  margin: 0;
+  position: relative;
+}
+.about-list label:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 11px;
+  width: 1px;
+  height: 12px;
+  background: #20247b;
+  -moz-transform: rotate(15deg);
+  -o-transform: rotate(15deg);
+  -ms-transform: rotate(15deg);
+  -webkit-transform: rotate(15deg);
+  transform: rotate(15deg);
+  margin: auto;
+  opacity: 0.5;
+}
+.about-list p {
+  margin: 0;
+  font-size: 15px;
+}
+
+@media (max-width: 991px) {
+  .about-avatar {
+    margin-top: 30px;
+  }
+}
+
+.about-section .counter {
+  padding: 22px 20px;
+  background: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 0 30px rgba(31, 45, 61, 0.125);
+}
+.about-section .counter .count-data {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.about-section .counter .count {
+  font-weight: 700;
+  color: #20247b;
+  margin: 0 0 5px;
+}
+.about-section .counter p {
+  font-weight: 600;
+  margin: 0;
+}
+mark {
+  background-image: linear-gradient(
+    rgba(252, 83, 86, 0.6),
+    rgba(252, 83, 86, 0.6)
+  );
+  background-size: 100% 3px;
+  background-repeat: no-repeat;
+  background-position: 0 bottom;
+  background-color: transparent;
+  padding: 0;
+  color: currentColor;
+}
+.theme-color {
+  color: #fc5356;
+}
+.dark-color {
+  color: #20247b;
 }
 
 section {
@@ -21,7 +158,6 @@ textarea {
 
 .center {
   text-align: center;
-
   h1 {
     margin-bottom: 10px;
   }
@@ -69,7 +205,6 @@ p {
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
-
   &:hover {
     color: white;
     text-decoration: none;
@@ -83,23 +218,18 @@ footer {
   padding-top: 5px;
   border-top: 1px solid $gray-medium-light;
   color: $gray-light;
-
   a {
     color: $gray;
-
     &:hover {
       color: $gray-darker;
     }
   }
-
   small {
     float: left;
   }
-
   ul {
     float: right;
     list-style: none;
-
     li {
       float: left;
       margin-left: 15px;
@@ -109,6 +239,12 @@ footer {
 
 /* home */
 
+// .home {
+//   background-image: url(/assets/index_background.jpg);
+//   background-size: contain;
+//   margin-left: 325px;
+//   margin-top: 52px;
+// }
 .jumbotron {
   background: url("/assets/index_background.jpg") no-repeat center center;
   -webkit-background-size: 100% 100%;
@@ -203,23 +339,18 @@ footer {
   padding-top: 5px;
   border-top: 1px solid $gray-medium-light;
   color: $gray-light;
-
   a {
     color: $gray;
-
     &:hover {
       color: $gray-darker;
     }
   }
-
   small {
     float: left;
   }
-
   ul {
     float: right;
     list-style: none;
-
     li {
       float: left;
       margin-left: 15px;
@@ -245,22 +376,18 @@ aside {
   section.user_info {
     margin-top: 20px;
   }
-
   section {
     padding: 10px 0;
     margin-top: 20px;
-
     &:first-child {
       border: 0;
       padding-top: 0;
     }
-
     span {
       display: block;
       margin-bottom: 3px;
       line-height: 1;
     }
-
     h1 {
       font-size: 1.4em;
       text-align: left;
@@ -351,18 +478,6 @@ input {
   }
 }
 
-.user-exam-show {
-  position: relative;
-  top: -200px;
-  width: 80%;
-  height: 25%;
-
-  .name-exam {
-    line-height: 50px;
-    font-size: 50px;
-  }
-}
-
 .gravatar_edit {
   margin-left: 140px;
 }
@@ -384,9 +499,6 @@ input {
   border-radius: 8px;
   position: relative;
   top: -120px;
-  .btn-finish-exam {
-    margin-bottom: 3%;
-  }
 }
 .view-question {
   position: relative;
@@ -584,6 +696,11 @@ input {
 }
 
 a.delete_user {
+  ul.pagination {
+    margin-left: 50%;
+  }
+}
+input.delete_user {
   height: 37px;
   background-color: #d9534f;
   color: white;
@@ -594,9 +711,10 @@ a.delete_user {
   width: 79px;
   text-align: center;
 }
-a.delete_user:hover{
+a.delete_user:hover {
   background-color: red;
 }
+
 // search
 .form-search.pub {
   float: right;
@@ -644,14 +762,14 @@ input.button--search:hover {
     right: 20%;
   }
   .avatar_edit {
-  margin: 15px 70px;
-  width: 50%;
-  height: 50%;
+    margin: 15px 70px;
+    width: 50%;
+    height: 50%;
     .avatar-user {
-        margin-left:50%;
-        width: 160px;
-        height: 160px;
-        border-radius: 20px;
+      margin-left: 50%;
+      width: 160px;
+      height: 160px;
+      border-radius: 20px;
     }
   }
 }
@@ -719,7 +837,11 @@ li.answer-user-li {
 }
 //  profile
 .headerr {
-  background-image: linear-gradient(to right bottom, rgba(71, 233, 22, 0.7), rgba(48, 185, 219, 0.3));
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(71, 233, 22, 0.7),
+    rgba(48, 185, 219, 0.3)
+  );
   display: flex;
   flex-direction: column;
   border-radius: 18px;
@@ -748,7 +870,7 @@ img.gravatar {
   border-radius: 20px;
   margin-bottom: 20px;
 }
-img.img_profile{
+img.img_profile {
   width: 160px;
   height: 160px;
   border-radius: 20px;
@@ -861,7 +983,7 @@ h1.header__left-name {
     width: 50px;
     height: 50px;
     float: left;
-    margin-right: 20px
+    margin-right: 20px;
   }
 }
 .marque {
@@ -878,7 +1000,11 @@ h1.header__left-name {
   }
 }
 .edit_profile {
-  background-image: linear-gradient(to right bottom, rgba(116, 188, 236, 0.7), rgba(48, 185, 219, 0.3));
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(116, 188, 236, 0.7),
+    rgba(48, 185, 219, 0.3)
+  );
   display: flex;
   flex-direction: column;
   border-radius: 20px;
@@ -962,7 +1088,8 @@ ul.nav.navbar-nav.navbar-right a:after {
 
 ul.nav.navbar-nav.navbar-right a:hover:after {
   width: 80%;
-}ul.nav.navbar-nav.navbar-right a {
+}
+ul.nav.navbar-nav.navbar-right a {
   position: relative;
   font-weight: bold;
 }
@@ -983,29 +1110,29 @@ ul.nav.navbar-nav.navbar-right a:hover:after {
 }
 
 .detail_user {
-    float: right;
-    width: 100px;
+  float: right;
+  width: 100px;
 }
 
 a.detail_user {
-    height: 37px;
-    background-color: #337ab7;
-    border-color: #2e6da4;
-    color: white;
-    font-weight: bold;
-    margin-top: 5px;
-    border-radius: 6px;
-    padding: 8px 0px;
-    width: 79px;
-    margin-right: 15px;
-    text-align: center;
+  height: 37px;
+  background-color: #337ab7;
+  border-color: #2e6da4;
+  color: white;
+  font-weight: bold;
+  margin-top: 5px;
+  border-radius: 6px;
+  padding: 8px 0px;
+  width: 79px;
+  margin-right: 15px;
+  text-align: center;
 }
 
-a.detail_user:hover{
+a.detail_user:hover {
   background-color: #0088ff;
 }
 
-.avatar_profile{
+.avatar_profile {
   img.avatar-user {
     width: 160px;
     height: 160px;
@@ -1014,24 +1141,24 @@ a.detail_user:hover{
 }
 
 nav {
-    .pagination{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+  .pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
-.title_exam{
+.title_exam {
   background-color: sandybrown;
 }
 tr.title_exam th {
-    text-align: center;
+  text-align: center;
 }
-tr td{
+tr td {
   text-align: center;
   margin-top: 15px;
 }
-td.td_exam{
+td.td_exam {
   margin: auto;
 }
 .col-lg-3 {
@@ -1041,17 +1168,17 @@ td.td_exam{
   box-sizing: border-box;
   margin-top: 26px;
   border-radius: 5px;
-  a{
+  a {
     color: white;
     font-weight: bold;
     text-decoration: none;
   }
-  .list-group-item1{
+  .list-group-item1 {
     position: relative;
     display: block;
     padding: 10px 10px;
     transition: all 0.2s linear;
-    a{
+    a {
       display: block;
       width: 200px;
       color: #fff;
@@ -1059,7 +1186,7 @@ td.td_exam{
     }
   }
 }
-.list-group-item1:hover{
+.list-group-item1:hover {
   // background-color: rgb(248, 248, 248);
   padding: 10px 18px;
   text-decoration: none;
@@ -1067,27 +1194,27 @@ td.td_exam{
 }
 
 .col-lg-3 h2 {
-    font-weight: bold;
-    color: #000;
+  font-weight: bold;
+  color: #000;
 }
 img.img-fluid {
-    object-fit: cover;
-    object-position: -48px 0;
+  object-fit: cover;
+  object-position: -48px 0;
 }
-.btn-primary{
+.btn-primary {
   font-size: 12px;
   margin-left: 20px;
 }
-.btn-danger{
+.btn-danger {
   font-size: 12px;
   margin-left: 20px;
 }
 input.btn.btn-lg.btn-success {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
-.new_user{
-  input{
+.new_user {
+  input {
     border-radius: 5px;
   }
 }
@@ -1096,34 +1223,35 @@ input.btn.btn-primary {
   margin-left: 0;
   margin-bottom: 4px;
 }
-.carousel-control.left{
+.carousel-control.left {
   background-image: none;
 }
-.carousel-control.right{
+.carousel-control.right {
   background-image: none;
 }
-.carousel-inner > .item > img, .carousel-inner > .item > a > img{
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
   width: 100%;
 }
-.panel{
+.panel {
   border: none;
   border-radius: 0;
-  background-color:#e4cefe ;
+  background-color: #e4cefe;
   margin-top: -26px;
 }
 .panel-heading {
   border-radius: 0;
   border: none;
-  h2{
-  color: black;
-  font-weight: bold;
+  h2 {
+    color: black;
+    font-weight: bold;
   }
 }
-.panel-default > .panel-heading{
-  background-color:#e4cefe ;
+.panel-default > .panel-heading {
+  background-color: #e4cefe;
 }
-.new_answer{
-  .form-group{
+.new_answer {
+  .form-group {
     background-color: white;
   }
 }
@@ -1137,12 +1265,12 @@ input.btn.btn-primary {
 //     }
 // }
 .center.jumbotron.home {
-    margin-top: 25px;
+  margin-top: 25px;
 }
-.details_profile{
+.details_profile {
   margin-left: 30%;
 }
-.edit_examqsetion{
+.edit_examqsetion {
   margin-left: 28%;
   margin-top: 26px;
   width: 40%;
@@ -1151,19 +1279,19 @@ input.btn.btn-primary {
   border-radius: 15px 0 0 15px;
 }
 .edit_exam {
-  fieldset{
+  fieldset {
     width: 80%;
     margin-left: 50px;
   }
 }
 .new_exam {
-  fieldset{
+  fieldset {
     width: 80%;
     margin-left: 50px;
   }
 }
-.img_edit_exam{
-  .img-fluid{
+.img_edit_exam {
+  .img-fluid {
     margin-left: 31.7%;
     margin-top: 60px;
     object-position: 0;
