--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -1,43 +1,35 @@
-- provide(:title, @user.name)
-.details_profile
-  .headerr
-    .profile
-      h1.header__avata-img
-        - if @user.image.blank?
-          .avatar_profile
-            = gravatar_for @user
-        - else
-          .avatar_profile
-            img.avatar-user alt="#{@user.name}" src="#{@user.image.image_url}"
-      h1.header__left-name= @user.name
-      .header__left-icon
-        a href="" target="_blank"
-          i.fa.fa-facebook aria-hidden="true"
-        a href="" target="_blank"
-          i.fa.fa-gitlab aria-hidden="true"
-        a href="" target="_blank"
-          i.fa.fa-twitter aria-hidden="true"
-        a href=""
-          i.fa.fa-github aria-hidden="true"
-    .personal_information
-      .information_left
-        h3
-          | NAME
-        p= @user.name
-        h3
-          | NGÀY SINH
-        p 15/03/2002
-      .information_left
-        h3
-          | EMAIL
-        p= @user.email
-        h3
-          | ĐỊA CHỈ
-        p= @user.address
-      .information_right
-        h3
-          | SỐ LẦN TEST
-        p= 0
-        h3
-          | SỐ LẦN ĐẬU
-        p 0
+section#about.section.about-section.gray-bg
+  .container
+    .row.align-items-center.flex-row-reverse
+      .col-lg-6
+        .about-text.go-to
+          h3.dark-color = @user.name
+          h6.theme-color.lead 
+          p
+            | I
+            mark Your Profile:
+            | 
+          .row.about-list
+            .col-md-6
+              .media
+                label E-mail
+                p #{@user.email}
+              .media
+                label Address
+                p #{@user.address}
+              .media
+                label Number of tests
+                p Canada
+              .media
+                label Number of passes
+                p #{@user.address}
+            .col-md-6
+              .media
+                = link_to 'Update Information', edit_user_path(id: @user.id)             
+              .media
+                = link_to "Update Avatar"         
+                .media
+                = link_to "Achivement", achievements_path(user_id: @user.id)                   
+      .col-lg-6
+        .about-avatar
+          = image_tag "anh1.png", width: 300, height: 300
