--- a/app/views/shared/_stats.html.slim
+++ b/app/views/shared/_stats.html.slim
@@ -1,6 +1,6 @@
 - @user ||= current_user
 .stats
   a href="#{selecting_user_path(@user)}" 
-    strong#following.stat
+    strong#selecting.stat
       = @user.selecting.count
     | selecting
