--- a/app/views/examcarts/destroy.js.slim
+++ b/app/views/examcarts/destroy.js.slim
@@ -1,2 +1,1 @@
-| $("#follow_form").html("#{escape_javascript(render('users/follow'))}")
-| $("#followers").html('#{@user.followers.count}')
+| $("#select_form").html("#{escape_javascript(render('users/select'))}")
