--- a/app/views/shared/_stats.html.slim
+++ b/app/views/shared/_stats.html.slim
@@ -2,5 +2,5 @@
 .stats
   a href="#{selecting_user_path(@user)}" 
     strong#selecting.stat
-      = @user.selecting.count
+      = @exam_cart.count
     | selecting
