--- a/app/views/shared/_stats.html.slim
+++ b/app/views/shared/_stats.html.slim
@@ -1,6 +1,6 @@
 - @user ||= current_user
 .stats
   a href="#{selecting_user_path(@user)}" 
-    strong#selecting.stat
+    h3#selecting.stat
       = @exam_cart.count
     | selecting
