--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -1,38 +1,38 @@
-section#about.section.about-section.gray-bg
-  .container
-    .row.align-items-center.flex-row-reverse
-      .col-lg-6
-        .about-text.go-to
-          h3.dark-color = @user.name
-          section.stats
-            = render 'shared/stats'
-          .col-md-8
-          h6.theme-color.lead 
-          p
-            | I
-            mark Your Profile:
-            | 
-          .row.about-list
-            .col-md-6
-              .media
-                label E-mail
-                p #{@user.email}
-              .media
-                label Address
-                p #{@user.address}
-              .media
-                label Number of tests
-                p Canada
-              .media
-                label Number of passes
-                p #{@user.address}
-            .col-md-6
-              .media
-                = link_to 'Update Information', edit_user_path(id: @user.id)             
-              .media
-                = link_to "Update Avatar"         
-                .media
-                = link_to "Achivement", achievements_path(user_id: @user.id)                   
-      .col-lg-6
-        .about-avatar
-          = image_tag "anh1.png", width: 300, height: 300
+- provide(:title, @user.name)
+.col-lg.9
+  .headerr
+    .profile
+      h1.header__avata-img= gravatar_for @user
+      h1.header__left-name= @user.name
+      .header__left-icon
+        a href="" target="_blank"
+          i.fa.fa-facebook aria-hidden="true"
+        a href="" target="_blank"
+          i.fa.fa-gitlab aria-hidden="true"
+        a href="" target="_blank"
+          i.fa.fa-twitter aria-hidden="true"
+        a href=""
+          i.fa.fa-github aria-hidden="true"
+    .personal_information
+      .information_left
+        h3
+          | NAME
+        p= @user.name
+        h3
+          = link_to 'Xem thành tích cá nhân'
+        section.stats
+          = render 'shared/stats'
+      .information_left
+        h3
+          | EMAIL
+        p= @user.email
+        h3
+          | ĐỊA CHỈ
+        p= @user.address
+      .information_right
+        h3
+          | SỐ LẦN TEST
+        p #{@user_exams.count}
+        h3
+          | SỐ LẦN ĐẬU
+        p #{@user_exams.where(is_passed: true).count}
