--- a/app/views/examcarts/show_select.html.slim
+++ b/app/views/examcarts/show_select.html.slim
@@ -33,4 +33,4 @@
                       i.fa.fa-trash
                   td.border-0.align-middle
                     a.text-dark href="#" 
-                      strong Start
+                      str Start
