--- a/app/views/static_pages/_list_exam.slim
+++ b/app/views/static_pages/_list_exam.slim
@@ -14,8 +14,8 @@
               - if current_user.selecting?(exam)
                 = form_for(current_user.active_examcarts.find_by(exam_id: exam.id), 
                   html: { method: :delete }) do |f|                                          
-                  = f.submit "Unselect", class: "btn"
+                  = f.submit "Unselect", class: "input"
               - else
                 = form_for(current_user.active_examcarts.build) do |f|
                   div= hidden_field_tag :exam_id, exam.id
-                  = f.submit "Select", class: "btn btn-primary"
+                  = f.submit "Select", class: "input select"
