--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -19,9 +19,7 @@
           | NAME
         p= @user.name
         h3
-          = link_to 'Xem thành tích cá nhân'
-        section.stats
-          = render 'shared/stats'
+          = button_to 'Xem thành tích cá nhân' 
       .information_left
         h3
           | EMAIL
