--- a/app/views/admin/exams/_form.slim
+++ b/app/views/admin/exams/_form.slim
@@ -3,7 +3,7 @@
     = render "shared/error_messages", object: f.object
     = f.label t(".picture")
     = f.fields_for :image_attributes do |image_f|
-      = image_f.file_field :image_url, class: "input-file"
+      = image_f.file_field :image_url, class: "edit_user"
     = f.label :name, t(".name")
     = f.text_field :name, class: "form-control"
     = f.label :time_limit, t(".time_limit")
