--- a/app/views/static_pages/_sidebar.slim
+++ b/app/views/static_pages/_sidebar.slim
@@ -5,8 +5,10 @@
       .list-group
         = link_to t(".admin_func1"), admin_exams_path, class: "list-group-item1"
         = link_to t(".admin_func2"), admin_users_path, class: "list-group-item1"
-        = link_to t(".admin_func3"), "#", class: "list-group-item1"
+        = link_to t(".admin_func3"), admin_statistics_path, class: "list-group-item1"
         = link_to t(".admin_func4"), "#", class: "list-group-item1"
+        -if @count_cart
+          = render 'shared/stats'
   - else
       h2.my-4
         = button_to t(".user_title")
