--- a/app/views/users/edit.slim
+++ b/app/views/users/edit.slim
@@ -10,9 +10,10 @@
         img.avatar-user alt="#{@user.name}" src="#{@user.image.image_url}"
     .update_user
       = form_for @user, :html => { :multipart => true } do |f|
+        = f.label :'Image'
         = render'shared/error_messages',object: @user
         = f.fields_for :image_attributes do |image_f|
-          = image_f.file_field :image_url, class: "input-file"
+          = image_f.file_field :image_url, class: "edit_user"
         = f.label :name
         = f.text_field :name, class:'form-control'
         = f.label :email
