--- a/app/views/admin/statistics/index.slim
+++ b/app/views/admin/statistics/index.slim
@@ -1,6 +1,7 @@
 .px-4.px-lg-0
   .container.text-white.py-5.text-center
     h1.display-4 Statistic Exam
+    h3.fa.fa-bar-chart
   .pb-5
     .container
       .row
