--- a/app/views/admin/users/show.slim
+++ b/app/views/admin/users/show.slim
@@ -2,13 +2,7 @@
 .details_profile
   .headerr
     .profile
-      h1.header__avata-img
-        - if @user.image.blank?
-          .avatar_profile
-            = gravatar_for @user
-        - else
-          .avatar_profile
-            img.avatar-user alt="#{@user.name}" src="#{@user.image.image_url}"
+      h1.header__avata-img= gravatar_for @user
       h1.header__left-name= @user.name
       .header__left-icon
         a href="" target="_blank"
@@ -25,8 +19,9 @@
           | NAME
         p= @user.name
         h3
-          | NGÀY SINH
-        p 15/03/2002
+          = link_to 'Xem thành tích cá nhân', achiviements_path(user_id: @user.id)
+        h3
+          = link_to 'Update Information', edit_user_path(id: @user.id) 
       .information_left
         h3
           | EMAIL
@@ -37,7 +32,7 @@
       .information_right
         h3
           | SỐ LẦN TEST
-        p= 0
+        p #{@user.user_exams.includes(:exam).count}
         h3
           | SỐ LẦN ĐẬU
-        p 0
+        p #{@user.user_exams.includes(:exam).where(is_passed: true).count}
