--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -185,7 +185,7 @@ h2 {
   letter-spacing: -1px;
   margin-bottom: 30px;
   text-align: center;
-  font-weight: boid;
+  font-weight: normal;
   color: rgb(58, 57, 57);
 }
 
@@ -479,13 +479,15 @@ input {
 }
 
 .gravatar_edit {
-  margin-left: 140px;
+  margin-top: -50px;
+  width: 200px;
+  height: 100px;
+  margin-left: 220px;
 }
 
 .update_user {
   margin-bottom: 30px;
   margin-top: 20px;
-  margin-left: 17%;
 }
 
 .col-md-offset-3 {
@@ -695,24 +697,20 @@ input {
   width: 100px;
 }
 
-a.delete_user {
-  ul.pagination {
-    margin-left: 50%;
-  }
+ul.pagination {
+  margin-left: 50%;
 }
+
 input.delete_user {
   height: 37px;
-  background-color: #d9534f;
+  background-color: rgb(190, 62, 62);
   color: white;
   font-weight: bold;
   margin-top: 5px;
   border-radius: 6px;
-  padding: 8px 0px;
+  border-radius: 38px;
+  padding: 6px 0px;
   width: 79px;
-  text-align: center;
-}
-a.delete_user:hover {
-  background-color: red;
 }
 
 // search
@@ -722,7 +720,6 @@ a.delete_user:hover {
 }
 .text_search {
   float: left;
-  margin-left: -60px;
 }
 input#name {
   width: 360px;
@@ -758,19 +755,22 @@ input.button--search:hover {
   margin-bottom: 30px;
   margin-top: 26px;
   h1 {
+    position: relative;
     font-size: 50px;
+    font-weight: bold;
     right: 20%;
+    margin-bottom: 70px;
   }
   .avatar_edit {
-    margin: 15px 70px;
+    // position: absolute;
+    margin: 10% 20%;
     width: 50%;
     height: 50%;
-    .avatar-user {
-      margin-left: 50%;
-      width: 160px;
-      height: 160px;
-      border-radius: 20px;
-    }
+  }
+  .avatar-user {
+    width: 50%;
+    height: 50%;
+    border-radius: 20px;
   }
 }
 
@@ -790,7 +790,6 @@ input.button--search:hover {
   margin-left: 48%;
   z-index: 2;
   box-shadow: 5px 5px 5px lightblue;
-  position: fixed;
 }
 
 .timer__part {
@@ -868,16 +867,8 @@ img.gravatar {
   height: 40px;
   object-fit: cover;
   border-radius: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
-img.img_profile {
-  width: 160px;
-  height: 160px;
-  border-radius: 20px;
-  margin-bottom: 20px;
-  margin-left: 18%;
-}
-
 h1.header__left-name {
   margin-left: 200px;
   float: left;
@@ -982,8 +973,7 @@ h1.header__left-name {
   img {
     width: 50px;
     height: 50px;
-    float: left;
-    margin-right: 20px;
+    border-radius: none;
   }
 }
 .marque {
@@ -1018,9 +1008,8 @@ h1.header__left-name {
     width: 430px;
   }
   input#user_image_attributes_image_url {
-    clear: both;
     margin-left: 15px;
-    //width: 200px;
+    // width: 200px;
   }
   input.btn.btn-primary.btn_submit {
     width: 430px;
@@ -1069,10 +1058,6 @@ footer {
       margin-right: 10px;
     }
   }
-}
-ul.nav.navbar-nav.navbar-right a {
-  position: relative;
-  font-weight: bold;
 }
 
 ul.nav.navbar-nav.navbar-right a:after {
@@ -1368,7 +1353,9 @@ body {
 img {
   max-width: 100%;
 }
-
+img.img_profile {
+  max-width: 50%;
+}
 .preview {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1564,4 +1551,281 @@ img {
     -webkit-transform: scale(1);
     transform: scale(1);
   }
+}
+
+.detail_user {
+  float: right;
+  width: 100px;
+}
+
+a.detail_user {
+  height: 37px;
+  background-color: #337ab7;
+  border-color: #2e6da4;
+  color: white;
+  font-weight: bold;
+  margin-top: 5px;
+  border-radius: 6px;
+  padding: 8px 0px;
+  width: 79px;
+  margin-right: 15px;
+  text-align: center;
+}
+a.delete_user {
+  height: 37px;
+  background-color: rgb(190, 62, 62);
+  background-color: #d9534f;
+  color: white;
+  font-weight: bold;
+  margin-top: 5px;
+  border-radius: 6px;
+  border-radius: 38px;
+  width: 79px;
+  width: 79px;
+  padding: 6px 0px;
+  padding: 8px 0px;
+  width: 79px;
+  text-align: center;
+}
+
+//nav
+ul.nav.navbar-nav.navbar-right a {
+  position: relative;
+  font-weight: bold;
+}
+
+ul.nav.navbar-nav.navbar-right a:after {
+  content: "";
+  position: absolute;
+  background-color: white;
+  height: 1.5px;
+  width: 0;
+  left: 10%;
+  top: 35px;
+  transition: 0.6s;
+}
+
+ul.nav.navbar-nav.navbar-right a:hover:after {
+  width: 80%;
+}
+ul.nav.navbar-nav.navbar-right a {
+  position: relative;
+  font-weight: bold;
+}
+
+ul.nav.navbar-nav.navbar-right a:after {
+  content: "";
+  position: absolute;
+  background-color: white;
+  height: 1.5px;
+  width: 0;
+  left: 10%;
+  top: 35px;
+  transition: 0.6s;
+}
+
+ul.nav.navbar-nav.navbar-right a:hover:after {
+  width: 80%;
+}
+
+.detail_user {
+  float: right;
+  width: 100px;
+}
+
+a.detail_user {
+  height: 37px;
+  background-color: #337ab7;
+  border-color: #2e6da4;
+  color: white;
+  font-weight: bold;
+  margin-top: 5px;
+  border-radius: 6px;
+  padding: 8px 0px;
+  width: 79px;
+  margin-right: 15px;
+  text-align: center;
+}
+
+a.detail_user:hover {
+  background-color: #0088ff;
+}
+
+.avatar_profile {
+  img.avatar-user {
+    width: 160px;
+    height: 160px;
+    border-radius: 20px;
+  }
+}
+
+nav {
+  .pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.title_exam {
+  background-color: sandybrown;
+}
+tr.title_exam th {
+  text-align: center;
+}
+// tr td {
+//   text-align: center;
+//   margin-top: 15px;
+// }
+td.td_exam {
+  margin: auto;
+}
+.list-group {
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  color: rgb(255, 255, 255);
+  // height: 250px;
+  a.list-group-item1 {
+    text-decoration: none;
+    font-weight: bold;
+    position: relative;
+    // letter-spacing: 2px;
+    // text-transform: uppercase;
+    color: rgb(5, 11, 22);
+    -webkit-text-stroke: 1px rgba(255, 255, 255, 0.5);
+  }
+  a.list-group-item1::before {
+    content: attr(data_text);
+    position: absolute;
+    color: red;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    // border-right: 8px solid white;
+  }
+  a.list-group-item1:hover::before {
+    width: 100%;
+    height: 100%;
+    transition: all 2s ease-in-out;
+    -webkit-text-stroke: 1px red;
+  }
+}
+
+.list-group-item1 {
+  position: relative;
+  display: block;
+  padding: 10px 15px;
+  margin-bottom: -1px;
+  border: 1px solid #ddd;
+}
+
+.col-lg-3 h2 {
+  font-weight: bold;
+}
+
+//star_rating
+body {
+  background-color: #f7f6f6;
+}
+
+.circle-image img {
+  border: 6px solid #fff;
+  border-radius: 100%;
+  padding: 0px;
+  top: -28px;
+  position: relative;
+  width: 70px;
+  height: 70px;
+  border-radius: 100%;
+  z-index: 1;
+  background: #e7d184;
+  cursor: pointer;
+}
+
+.dot {
+  height: 18px;
+  width: 18px;
+  background-color: blue;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  border: 3px solid #fff;
+  top: -48px;
+  left: 186px;
+  z-index: 1000;
+}
+
+.name {
+  margin-top: -21px;
+  font-size: 18px;
+}
+
+.fw-500 {
+  font-weight: 500 !important;
+}
+
+.start {
+  color: green;
+}
+
+.stop {
+  color: red;
+}
+
+.rate {
+  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 12px;
+}
+
+.rating {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+}
+
+.rating > input {
+  display: none;
+}
+
+.rating > label {
+  position: relative;
+  width: 1em;
+  font-size: 30px;
+  font-weight: 300;
+  color: #ffd600;
+  cursor: pointer;
+}
+
+.rating > label::before {
+  content: "\2605";
+  position: absolute;
+  opacity: 0;
+}
+
+.rating > label:hover:before,
+.rating > label:hover ~ label:before {
+  opacity: 1 !important;
+}
+
+.rating > input:checked ~ label:before {
+  opacity: 1;
+}
+
+.rating:hover > input:checked ~ label:before {
+  opacity: 0.4;
+}
+
+.buttons {
+  top: 36px;
+  position: relative;
+}
+
+.rating-submit {
+  border-radius: 15px;
+  color: #fff;
+  height: 49px;
+}
+
+.rating-submit:hover {
+  color: #fff;
 }
